data/derived/fa15/progs/unify/prog0994.ml.out
Characters 221-222:
  | Average (e1,e2)      -> (((exprToString e1) +. (exprToString e2)) /. (exprToString 2))
                                                                                       ^
Error: This expression has type int but an expression was expected of type
         expr
